fixed table spacing ST-443

--- a/src/components/layout/Table.module.scss
+++ b/src/components/layout/Table.module.scss
@@ -12,8 +12,8 @@
   }
 
   td {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 
   tr {
@@ -25,7 +25,7 @@
 
   thead {
     th {
-      padding: 12px;
+      padding: 12px 16px;
       position: sticky;
       top: 0;
       background: hsl(
@@ -62,7 +62,7 @@
   }
 
   td {
-    padding: 10px 20px;
+    padding: 10px 16px;
     border-top: 1px solid var(--card-border);
   }
 }
