--- a/src/pages/stake/QuickStake.module.scss
+++ b/src/pages/stake/QuickStake.module.scss
@@ -19,9 +19,9 @@
   margin-right: 12px;
 
   .token__icon {
-    width: 50px;
-    height: 50px;
-    padding: 12px;
+    width: 40px;
+    height: 40px;
+    padding: 8px;
     border-radius: 50%;
     background: hsl(
       var(--button-default-bg-h),
@@ -34,9 +34,9 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 20px;
-    height: 20px;
-    padding: 2px;
+    width: 16px;
+    height: 16px;
+    padding: 1px;
     border-radius: 50%;
     background-color: var(--card-bg-muted);
   }
